// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSlider Snap render AtSlider -- props activeColor 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props backgroundColor 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props blockColor 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props blockSize 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props disabled 1`] = `
<div
  class="at-slider at-slider--disabled"
>
  <div
    class="at-slider__inner"
  >
    <input
      disabled=""
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props max 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="200"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props min 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="50"
      step="1"
      type="text"
      value="50"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props showValue 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
  <div
    class="at-slider__text"
  >
    0
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props step 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render AtSlider -- props value 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="50"
    />
  </div>
</div>
`;

exports[`AtSlider Snap render initial AtSlider 1`] = `
<div
  class="at-slider"
>
  <div
    class="at-slider__inner"
  >
    <input
      max="100"
      min="0"
      step="1"
      type="text"
      value="0"
    />
  </div>
</div>
`;
